# Azul

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
doc/html/: _azul_8h_source.html  annotated.html  classes.html  classfgcu_1_1_azul-members.html  classfgcu_1_1_azul.html  dir_24f72a55a7a375dbaabe32947da35afa.html  dir_cf70f9b21d28b130a8868749962a5920.html  files.html  functions.html  functions_enum.html  functions_func.html  index.html  namespacefgcu.html  namespaces.html
src/: main.cpp
